plugins {
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }

    maven {
        url = uri('https://repo.codemc.io/repository/maven-releases/')
    }
}

dependencies {
    api 'org.jetbrains:annotations:23.1.0'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    compileOnly 'org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT'
    compileOnly 'org.spigotmc:plugin-annotations:1.2.3-SNAPSHOT'
    annotationProcessor 'org.spigotmc:plugin-annotations:1.2.3-SNAPSHOT'
    compileOnly 'com.github.retrooper.packetevents:spigot:2.2.1'

    testImplementation 'org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT'
    testImplementation 'org.mockito:mockito-core:5.10.0'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
}

group = 'me.squidxtv'
version = '1.0-SNAPSHOT'
description = 'FrameUI'

java.sourceCompatibility = JavaVersion.VERSION_21

java {
    withJavadocJar()
}

test {
    useJUnitPlatform()
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'me.squidxtv'
            artifactId = 'FrameUI'
            version = '1.0-SNAPSHOT'

            from components.java
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'

}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}
